2015-09-09  Maninder Singh <maninder1.s@samsung.com>
	    Mark Hatle <mark.hatle@windriver.com>
	* rtld/rtld.c: dso null pointer check fix

2015-04-06  Mark Hatle <mark.hatle@windriver.com>
	    Maninder Singh <maninder1.s@samsung.com>
	* rtld/dl-version.c: Add debug for mising ld-linux or libc.so

2014-12-10  Mark Hatle <mark.hatle@windriver.com>
	* rtld/rtld.c: Sync aarch64 elf_machine_type_class (dl-machine.h)
		(do_relocs): fix comparison pltrel_end >= rel_end
	* rtld/dl-tls.c: Add basic aarch64 support

2014-12-10  Mark Hatle <mark.hatle@windriver.com>
	* rtld/: Resync to glibc-2.20
		Replace referenced to GLRO_dl_debug_mask to
		GLRO(dl_debug_mask)

	* rtld/rtld.h: Sync DL_DEBUG_* defines from ldsodefs.h
		add DSO_FILENAME and RTLD_PROGNAME definitions
		Move to __glibc_unlikely/likely instead of __builtin_expect
		rename link_map and update unique_sym_table to match glibc

	* rtld/dl-hash.h:
		Apply glibc changes:
		2011-12-03 Ulrich Drepper <drepper@gmail.com>
			Fix more warnings

		2011-12-04 Ulrich Drepper <drepper@gmail.com>
			Fix attreibute for _dl_elf_hash

		2011-12-04 Ulrich Drepper <drepper@gmail.com>
			Small optimization of generic ELF hash function

		2011-12-10 Ulrich Drepper <drepper@gmail.com>
			Optimize generic ELF hash function a bit more

		2012-02-09 Paul Eggert <eggert@cs.ucla.edu>
			Replace FSF snail mail address with URLs.

		2013-01-02 Joseph Myers <joseph@codesourcery.com>
			Update copyright notices with scripts/update-copyrights.

		2014-01-01 Allan McRae <allan@archlinux.org>
			Update copyright notices with scripts/update-copyrights

	* rtld/dl-load.c: split (_dl_new_object) move to dl-object
		Remove VERSYMIDX, already defined in rtld.h

		Apply glibc changes:
		2012-02-09 Paul Eggert <eggert@cs.ucla.edu>
			Replace FSF snail mail address with URLs.

		2012-04-04 Siddhesh Poyarekar <siddhesh@redhat.com>
			(Updated copyright date)

		2013-01-02 Joseph Myers <joseph@codesourcery.com>